Fixed typo. Moved line down one.

--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -202,7 +202,7 @@ Note that if $O$ is greater than 0 then the colour is normalized (divided by $1 
 % ---------------------------- %
 \newpage
 \section{Surface Extraction}\label{background:surfaceextraction}
-Surface extraction is another technique that can be used to visualizing volumetric data. Instead of visualizing the data directly, as in direct volume rendering, the volume is processed to build a geometric representation which can then be rendered.
+Surface extraction is another technique that can be used to visualize volumetric data. Instead of visualizing the data directly, as in direct volume rendering, the volume is processed to build a geometric representation which can then be rendered.
 
 This advantage of using surface extraction is that it is much cheaper to render\cite{surfacevsvolumerendering}. There is an initial penalty where the volume data is processed to extract surfaces but once this has been completed the rendering of geometric primitives is something that can be done rapidly by graphics hardware.
 
