--- a/Final-Report/method.tex
+++ b/Final-Report/method.tex
@@ -183,7 +183,7 @@ Before the uncertainty is visualized it is first pre-processed. Figure \ref{fig:
 The uncertainty is linearly scaled so each value lies between 0 (bad) and 1 (good).
 
 \subsubsection*{Invert}
-The uncertainty can be inverted if saved the opposite way around. (\texttt{Uncertainty = 1 - Uncertainty})
+The uncertainty can be inverted if saved the opposite way around.\\(\texttt{Uncertainty = 1 - Uncertainty})
 
 \subsubsection*{Erosion}
 The edges of the uncertainty are removed in three steps:
@@ -774,7 +774,7 @@ Figure \ref{fig:nextscanplanecube} shows the cube of uncertainty. The optimal sc
   \begin{subfigure}[b]{0.5\textwidth}
     \usebox{\mybox}
     \caption{Cube}
-    \label{fig:nextscanplanecube}  
+    \label{fig:nextscanplanecubecube}  
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
