--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Welcome to Sam's Final Year Project. This repository contains everything you need to run it and bits and bobs that I've been playing around with.
+
+The project is hosted at https://gitlab.doc.ic.ac.uk/sae11/final-year-project
