--- a/README
+++ b/README
@@ -1,3 +1,9 @@
-Welcome to Sam's Final Year Project. This repository contains everything you need to run it and bits and bobs that I've been playing around with.
+# Welcome to Sam's Final Year Project.
+## "Evaluating uncertainty in motion-corrected fetal MRI."
+
+The implementation is an MITK Plugin. This repository contains everything you should need to run it.
+
+### Installation Instructions
+
 
 The project is hosted at https://gitlab.doc.ic.ac.uk/sae11/final-year-project
